backend-http-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kz-node-direct
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 8008
  selector:
    app: kz-node
