combined-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kz-backend-http
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8008
    nodePort: 30400
  selector:
    app: kz-node
---
apiVersion: v1
kind: Service
metadata:
  name: kz-backend-https
spec:
  type: NodePort
  ports:
  - name: https
    port: 443
    targetPort: 30400
    nodePort: 30443
  selector:
    app: ssl-proxy
