dual-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: http-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: http-proxy
  template:
    metadata:
      labels:
        app: http-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 30400
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
      volumes:
      - name: nginx-config
        configMap:
          name: http-proxy-config
---
apiVersion: v1
kind: Service
metadata:
  name: http-backend
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 30400
    nodePort: 30401
  selector:
    app: http-proxy
