http-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kz-backend-http
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8008
    nodePort: 30400
  selector:
    app: kz-node
