http-service-acme.yaml
apiVersion: v1
kind: Service
metadata:
  name: kz-http-acme
spec:
  type: NodePort
  ports:
  - name: http
    port: 80
    targetPort: 8008
    nodePort: 30080
  selector:
    app: kz-node
