service-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kz-node-lb
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.1.240"
spec:
  type: LoadBalancer
  selector:
    app: kz-node
  ports:
    - targetPort: 8008
      port: 80
