service.yaml
apiVersion: v1
kind: Service
metadata:
  # The name of your service
  name: kz-node
spec:
  # This is the service type that exposes the port on the node (localhost in local clusters)
  type: NodePort
  selector:
    # IMPORTANT: This must match the labels of the Pods in your deployment.
    # For example, if your deployment's template has a label `app: my-cool-app`,
    # you must use `app: my-cool-app` here.
    app: kz-node
  ports:
    - # The port your application's container is listening on inside the pod.
      # Change to whatever port your app actually uses.
      targetPort: 8008

      # The port the service itself is exposed on internally within the cluster.
      port: 80

      # The external port you will use to access the service from outside the cluster.
      # NOTE: By default, this must be in the 30000-32767 range.
      # Using a static port for consistent access
      nodePort: 30400
