ssl-proxy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ssl-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ssl-proxy
  template:
    metadata:
      labels:
        app: ssl-proxy
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 30400
        volumeMounts:
        - name: nginx-config
          mountPath: /etc/nginx/nginx.conf
          subPath: nginx.conf
        - name: ssl-certs
          mountPath: /etc/ssl/certs
          readOnly: true
      volumes:
      - name: nginx-config
        configMap:
          name: nginx-ssl-proxy-config
      - name: ssl-certs
        secret:
          secretName: kz-backend-tls-temp
---
apiVersion: v1
kind: Service
metadata:
  name: ssl-proxy
spec:
  type: NodePort
  ports:
  - port: 443
    targetPort: 30400
    nodePort: 30402
  selector:
    app: ssl-proxy
