backend-ssl-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kz-backend-ssl
  annotations:
    metallb.universe.tf/allow-shared-ip: shared
spec:
  type: LoadBalancer
  loadBalancerIP: 10.152.183.100
  ports:
  - name: https-backend
    port: 30400
    targetPort: 80
    protocol: TCP
  selector:
    app: kz-node
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kz-backend-ssl-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - srv642680.hstgr.cloud
    secretName: kz-backend-tls
  rules:
  - host: srv642680.hstgr.cloud
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kz-node
            port:
              number: 80
